src/objects/fferpcore__SequenceField__mdt.object
<CustomObject>
    <description>Contains records that specify the objects and fields to which sequences are to be applied.</description>
    <fields>
        <fullName>fferpcore__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the sequence is enabled for the object and field specified.</description>
        <inlineHelpText>Indicates whether the sequence is enabled for the object and field specified.</inlineHelpText>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fferpcore__Field__c</fullName>
        <description>Field to which the number sequence is to be written.</description>
        <inlineHelpText>Field to which the number sequence is to be written.</inlineHelpText>
        <label>Field</label>
        <metadataRelationshipControllingField>fferpcore__SequenceField__mdt.fferpcore__Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Sequence Fields</relationshipLabel>
        <relationshipName>SequenceFields</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>fferpcore__IncludeRecord__c</fullName>
        <description>A checkbox or formula field on the record that determines whether it is to be sequenced. The checkbox or formula field must be equal to true for the record to be sequenced.</description>
        <inlineHelpText>A checkbox or formula field on the record that determines whether it is to be sequenced. The checkbox or formula field must be equal to true for the record to be sequenced.</inlineHelpText>
        <label>Include Record</label>
        <metadataRelationshipControllingField>fferpcore__SequenceField__mdt.fferpcore__Object__c</metadataRelationshipControllingField>
        <referenceTo>FieldDefinition</referenceTo>
        <relationshipLabel>Sequence Filters</relationshipLabel>
        <relationshipName>SequenceFilters</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>fferpcore__Object__c</fullName>
        <description>Object that contains the field to which the number sequence is to be written.</description>
        <inlineHelpText>Object that contains the field to which the number sequence is to be written.</inlineHelpText>
        <label>Object</label>
        <referenceTo>EntityDefinition</referenceTo>
        <relationshipLabel>Sequence Fields</relationshipLabel>
        <relationshipName>SequenceFields</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>fferpcore__Sequence__c</fullName>
        <description>Lookup to the Sequence to which this record relates.</description>
        <inlineHelpText>Lookup to the Sequence to which this record relates.</inlineHelpText>
        <label>Sequence</label>
        <referenceTo>fferpcore__Sequence__mdt</referenceTo>
        <relationshipLabel>Fields</relationshipLabel>
        <relationshipName>Fields</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Sequence Field</label>
    <pluralLabel>Sequence Fields</pluralLabel>
</CustomObject>